<resources>
    <string name="facebook_app_id">2268931679891162</string>
    <string name="app_name">Lasross</string>
    <string name="alert">Alerta</string>
    <string name="sign_in_with">Sign In With</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="change_pass">Change Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_address">Add Address</string>
    <string name="address">Address</string>
    <string name="plan">Plan</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="house_no">House Number</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="pin_code">PIN Code</string>
    <string name="email_id">Email ID</string>
    <string name="send">Send</string>
    <string name="add_card">Add Card</string>
    <string name="golden_plan">Golden</string>
    <string name="silver_plan">  Silver </string>
    <string name="no_discount">No Discount</string>
    <string name="no_free_shipping">No Free shipping</string>
    <string name="free_shipping">Free shipping</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscription">Subscription</string>
    <string name="active_plan">Active Plan</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="stop_auto_recurring">Stop Auto Recurring</string>
    <string name="continue_free">Continue as free</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="up_to_50off">Up to 50% OFF !</string>
    <string name="sort_by">SORT BY</string>
    <string name="StripeKeyTest">sk_test_51IP8QbI2oDeWaFshezNlgLIFybcS74yM40XzpLXqYJqWZgaDoM75qBVJJ7AGgMkMh3OmOlhsmV4Gub5SfUVvu73P00K6Pc5m0Z</string>
    <string name="sort_default">Default Sorting</string>
    <string name="sort_popularity">Sort By Popularity</string>
    <string name="sort_rating">Sort By Average Rating</string>
    <string name="sort_latest">Sort By Latest</string>
    <string name="sort_low_high">Sort By Price:Low To High</string>
    <string name="sort_high_low">Sort By Price:High To Low</string>
    <string name="my_orders">My Orders</string>
    <string name="tracking_my_orders">Tracking Details</string>
    <string name="faq">FAQ\'s</string>
    <string name="all_reviews">All Reviews</string>
    <string name="wish_list">Wishlist</string>
    <string name="order_detail">Order Details</string>
    <string name="filters">Filters</string>
    <string name="tracking_details">Tracking Details</string>
    <string name="my_cart">My Cart</string>
    <string name="setting">Settings</string>
    <string name="my_address">My Addresses</string>
    <string name="contact_us">Contact Us</string>
    <string name="accounts">Account</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="language">Language</string>
    <string name="large">large (l)</string>
    <string name="medium">Medium (m)</string>
    <string name="xlarge">Xtralarge (xl)</string>
    <string name="small">Small (sm)</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="grey">Grey</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="size">SIZE</string>
    <string name="color_available">COLOR AVAILAIBLE</string>
    <string name="view_similar">VIEW SIMILAR</string>
    <string name="description">DESCRIPTION</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="done">Done</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="crop_image_activity_title">Crop Image</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="result_image_desc">crop result</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="coats_and_jackets">COATS AND JACKETS</string>
    <string name="info">INFO</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="logout_msg">Do you want to logout</string>
    <string name="confirm_cancel_subscription_text">Are you sure you want to stop auto recurring</string>
    <string name="logout">Logout</string>
    <string name="session_expired">Session has been expired. Go back to Login</string>
    <string name="ok">Ok</string>
    <string name="internet_connection">Server down or no internet connection</string>
    <string name="oops_wrong">oops something went wrong</string>
    <string name="search_here_for_products">Search Here for Products.......</string>
    <string name="product_not_found">No record found</string>
    <string name="shop">Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="it_is_a_long_established_fact_that_a_reader">It is a long established fact that a reader</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_q_a">My Q/A</string>
    <string name="settings">Settings</string>
    <string name="abc">abc</string>
    <string name="alertOutOfMemory">This device doesn\'t have enough space , free up storage space</string>
    <string name="pickImage">Please select image or video</string>
    <string name="sku">SKU:</string>
    <string name="category">Category:</string>
    <string name="close">CLOSE</string>
    <string name="apply">APPLY</string>
    <string name="move_to_bag">MOVE TO BAG</string>
    <string name="clear_all">CLEAR ALL</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="no_items">No Items</string>
    <string name="no_order">No Orders</string>
    <string name="no_notification">No Notifications</string>
    <string name="wishlist_no_item_text">Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia</string>
    <string name="select_price_range">Select Price Range</string>
    <string name="discount">Discount</string>
    <string name="total_amount">Total amount</string>
    <string name="continues">CONTINUE</string>
    <string name="item">item</string>
    <string name="items_not_found">Items not found</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="not_a_member">Not a member?</string>
    <string name="already_a_member">Already a member?</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="add_new_address">Add New Address</string>
    <string name="saved_address">SAVED ADDRESS</string>
    <string name="delivery">Delivery</string>
    <string name="shipping_details">DETALLES DE ENVÍO</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="my_card">My Cards</string>
    <string name="save_cards">SAVED CARDS</string>
    <string name="no_address_found">No address added</string>
    <string name="change_add">CHANGE ADDRESS</string>
    <string name="add_new_card">ADD NEW CARD</string>
    <string name="payment">Payment</string>
    <string name="choose_payment_type">CHOOSE PAYMENT TYPE</string>
    <string name="credit_debit_atm_card">Credit / Debit / ATM Card</string>
    <string name="select_message">Please select payment method</string>
    <string name="delete">Delete</string>
    <string name="save_card">Saved Cards</string>
    <string name="card_not_found">Card not found</string>
    <string name="update_address">UPDATE ADDRESS</string>
    <string name="place_key">AIzaSyDuEJjb_-knzxl69RX-8hm4_EuCGaNZ7Ao</string>
    <string name="total">Total</string>
    <string name="select_address">SELECT ADDRESS</string>
    <string name="select_card">PAY</string>
    <string name="review">REVIEW</string>
    <string name="write_a_review">WRITE A REVIEW</string>
    <string name="write_review">Write Review</string>
    <string name="write_your_review">Write your review here...</string>
    <string name="write_your_feedback">Write your feedback...</string>
    <string name="customer_help">Customer Help</string>
    <string name="title">Title</string>
    <string name="subject">Subject</string>
    <string name="submit">Submit</string>
    <string name="sub_total">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="address_title">Address Title</string>
    <string name="ordered_and_approved">Ordered and Approved</string>
    <string name="packed">Packed</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="your_item_packed_on">Your item has been packed on</string>
    <string name="your_item_has_been_shipped_on">Your item has been shipped on</string>
    <string name="your_item_has_been_delivered_on">Your item has been delivered on</string>
    <string name="discount_with_golden_obtain_20_per_cent_in_all_items">Discount with golden obtain 20 per cent in all items</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="english_lng">English</string>
    <string name="spanish_lng">Spanish</string>
    <string name="subscription_plan">Subscription Plan</string>
    <string name="next_renew_date">Next renew Date- </string>
    <string name="next_billing_date">Next Billing Date- </string>
    <string name="expiry_date_active_plan">Expiry Date- </string>
    <string name="todo">TODO</string>
    <string name="subtotal">Subtotal</string>
    <string name="price_details">Detalles del precio</string>
    <string name="pricing_details">PRICING DETAIL</string>
    <string name="item_quantity">Item quantity</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="cod">(COD)</string>
    <string name="pay">Pay</string>
    <string name="card_add_success">Card added successfully</string>
    <string name="your_order_placed_on">Your order placed on</string>
    <string name="_25th_oct_2019_8_51_am">25th Oct 2019 - 8:51 AM</string>
    <string name="_27th_oct_2019_12_00_am">27th Oct 2019 - 12:00 AM</string>
    <string name="_28th_oct_2019_1_51_am">28th Oct 2019 - 1:51 AM</string>
    <string name="_28th_oct_2019_5_51_pm">28th Oct 2019 - 5:51 PM</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="generated_no_is">Generated no. is :</string>
    <string name="off">off</string>
    <string name="seller_processed_order_on">Seller processed order on</string>
    <string name="_26th_oct_2019_2_31_am">26th Oct 2019 - 2:31 AM</string>
    <string name="ekart_logistics_frdhjl76gj">Ekart Logistics - FRDHJL76GJ</string>
    <string name="your_item_is_out_of_delivery">Your item is out of delivery</string>
    <string name="_28th_oct_2019_3_00_am">28th Oct 2019 - 3:00 AM</string>
    <string name="your_item_has_been_received_in_the_hub_nearest_to_you">Your item has been received in the hub nearest to you</string>
</resources>