<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/home_header_bg"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/tvOrderDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/back_arrow_icon"
                android:drawablePadding="@dimen/_5sdp"
                android:fontFamily="@font/ibmplexsans_regular"
                android:gravity="center"
                android:text="@string/tracking_details"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/bag_icon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:background="@drawable/green_box" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center"
                    android:background="#3bb54a" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:text="@string/ordered_and_approved"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/your_order_placed_on"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/_25th_oct_2019_8_51_am"
                    android:textColor="#828282"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/seller_processed_order_on"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/_26th_oct_2019_2_31_am"
                    android:textColor="#828282"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="-30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:background="@drawable/green_box" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_gravity="center"
                    android:background="#3bb54a" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:text="@string/packed"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/your_item_packed_on"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/_27th_oct_2019_12_00_am"
                    android:textColor="#828282"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="-30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="@dimen/_7sdp"
                    android:layout_height="@dimen/_7sdp"
                    android:background="@drawable/green_box" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_gravity="center"
                    android:background="#3bb54a" />
            </LinearLayout>

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:text="@string/shipped"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/ekart_logistics_frdhjl76gj"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/your_item_has_been_shipped_on"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/_28th_oct_2019_1_51_am"
                    android:textColor="#828282"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:text="@string/your_item_has_been_received_in_the_hub_nearest_to_you"
                    android:textColor="#fe6a2e"
                    android:textSize="@dimen/_7sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/your_item_is_out_of_delivery"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/_28th_oct_2019_3_00_am"
                    android:textColor="#828282"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="-10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/_7sdp"
                android:layout_height="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/green_box" />

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_medium"
                    android:text="@string/delivered"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/your_item_has_been_delivered_on"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ibmplexsans_regular"
                    android:text="@string/_28th_oct_2019_5_51_pm"
                    android:textColor="#828282"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>