<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/ibmplexsans_bold"
            android:text="@string/alert"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tvTitleOfVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ibmplexsans_regular"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:text="@string/session_expired"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".4"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="#CACACA" />

        <TextView
            android:id="@+id/tvOK"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:fontFamily="@font/ibmplexsans_bold"
            android:gravity="center"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_15sdp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>